feat: add limit selector

--- a/src/index.css
+++ b/src/index.css
@@ -59,3 +59,23 @@ h1 {
 .negative {
   color: #f44336;
 }
+
+.controls {
+  display: flex;
+  align-items: center;
+  margin-bottom: 2rem;
+  justify-content: end;
+  gap: 0.75rem;
+}
+
+.controls label {
+  font-weight: bold;
+}
+
+.controls select {
+  padding: 0.5rem 1rem;
+  border-radius: 8px;
+  border: none;
+  background: #1c1f26;
+  color: white;
+}
