--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,11 @@ h1 {
   font-size: 2rem;
 }
 
+a {
+  color: #fff;
+  text-decoration: none;
+}
+
 .grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
@@ -141,4 +146,72 @@ h1 {
 
 .top-nav a:hover {
   color: #4090db;
+}
+
+.coin-details-container {
+  max-width: 700px;
+  background-color: #141a25;
+  font-family: Arial, sans-serif;
+  color: #555d67;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin: 40px auto;
+  text-align: center;
+}
+
+.coin-details-container a {
+  display: inline-block;
+  margin-bottom: 20px;
+  text-decoration: none;
+  color: #007bff;
+  font-weight: bold;
+  transition: color 0.3s;
+}
+
+.coin-details-container a:hover {
+  color: #0056b3;
+}
+
+.coin-details-title {
+  font-size: 36px;
+  margin-bottom: 10px;
+}
+
+.coin-details-image {
+  width: 100px;
+  margin-bottom: 20px;
+}
+
+.coin-details-description {
+  font-size: 16px;
+  margin-bottom: 20px;
+  color: #141a25;
+}
+
+.coin-details-info h3,
+.coin-details-info h4 {
+  margin: 10px 0;
+  color: #f2f2f2;
+}
+
+.coin-details-info h3 {
+  font-size: 22px;
+}
+
+.coin-details-info h4 {
+  font-size: 16px;
+}
+
+.coin-details-links {
+  margin-top: 20px;
+}
+
+.coin-details-links a {
+  color: #007bff;
+  text-decoration: none;
+}
+
+.coin-details-links a:hover {
+  text-decoration: underline;
 }
